Cherry-pick 41847fe79586. rdar://113416758

[JSC] IntrinsicGetter AccessCase should not use Equivalent condition
    https://bugs.webkit.org/show_bug.cgi?id=259841
    rdar://113416758

    Reviewed by Keith Miller.

    265594@main leveraged Equivalent condition in AccessCase, but this is wrong.
    DFG cannot use Equivalent condition for AccessCase (see planLoad, ComplexGetByStatus etc.),
    and breaking a key invariant / heuristics for DFG.

    This patch reverts 265594@main and fixes the original issue in different way.
    Instead of using Equivalent condition, we just check getter in AccessCase.

    * Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:
    (JSC::InlineCacheCompiler::generateImpl):
    * Source/JavaScriptCore/bytecode/ObjectPropertyConditionSet.cpp:
    (JSC::generateConditionsForPrototypePropertyHit):
    * Source/JavaScriptCore/bytecode/ObjectPropertyConditionSet.h:
    * Source/JavaScriptCore/bytecode/Repatch.cpp:
    (JSC::tryCacheGetBy):

    Canonical link: https://commits.webkit.org/266659@main

(cherry picked from commit e2c240ab4d7f640c413237cad30813fe9ca18477)

Identifier: 265870.412@safari-7616-branch